# MP3Encoder

./: .gitignore  CMakeLists.txt  README.md
builds/linux/: MP3Encoder
lame-3.100/lib/: libmp3lame-static.lib  libmp3lame.la
src/: Encoder.cpp  Encoder.hpp  ParallelEncoder.cpp  ParallelEncoder.hpp  encoder.cpp  encoder.h  main.cpp  parallel_encoder.cpp  parallel_encoder.h
